Fix z-index

--- a/src/pages/builder/Builder.module.scss
+++ b/src/pages/builder/Builder.module.scss
@@ -20,6 +20,9 @@
     height: 52px;
     display: flex;
 
+    z-index: 5;
+    background: rgb(249 247 250);
+
     div {
       flex-grow: 1;
       display: flex;
